# seek

./: .gitignore  README.md  ask.py  install.sh  plan.md  pyproject.toml  requirements.txt  seek.sh  todo.md
src/seek/: main.py
